--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,25 @@
+alembic==1.11.1
+Babel==2.12.1
+blinker==1.6.2
+click==8.1.3
+colorama==0.4.6
 Flask==2.2.5
 Flask-Admin==1.6.1
+flask-babel==3.1.0
+Flask-CKEditor==0.4.6
 Flask-Login==0.6.2
 Flask-Migrate==4.0.4
 Flask-SQLAlchemy==3.0.3
 Flask-WTF==1.1.1
-Flask-CKEditor==0.4.6
-flask-babel==3.1.0
-gunicorn
+greenlet==2.0.2
+gunicorn==20.1.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+Mako==1.2.4
+MarkupSafe==2.1.3
 Pillow==9.5.0
+pytz==2023.3
+SQLAlchemy==2.0.17
+typing_extensions==4.7.1
+Werkzeug==2.3.6
+WTForms==3.0.1
